kubernetes-services/additions/k3s-upgrade-controller/grafan-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger-ui
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway/non-tls-gateway
  http:
    - match:
        - uri:
            prefix: /kiali/
        - uri:
            exact: /kiali
      route:
        - destination:
            host: kiali
            port:
              number: 20001
